--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,6 @@ html
 	head
 		meta(charset='utf-8')
 		body
+			script#props(type='application/json')!=JSON.stringify(props)
 			<h1>Hello world</h1>
 			#content(data-component=component)!=content
